Parser, Lexer and Interpreter purged