@@ -8,13 +8,17 @@ import java.util.List;
 import java.util.Objects;
 
 public class AssignationASTBuilder implements ASTBuilder<Assignation> {
-    private final ValueASTBuilder valueASTBuilder = new ValueASTBuilder();
+    private final ValueASTBuilder valueASTBuilder;
+
+    public AssignationASTBuilder(String version) {
+        this.valueASTBuilder = new ValueASTBuilder(version);
+    }
 
     @Override
     public boolean verify(List<Token> statement) {
         if (statement.isEmpty()) {
             return false;
-        } else if (!Objects.equals(statement.get(0).getType(), "IDENTIFIER")) {
+        } else if (!Objects.equals(statement.getFirst().getType(), "IDENTIFIER")) {
             return false;
         } else if (!Objects.equals(statement.get(1).getType(), "ASSIGN")) {
             return false;
@@ -24,7 +28,7 @@ public class AssignationASTBuilder implements ASTBuilder<Assignation> {
     @Override
     public Assignation build(List<Token> statement) {
         return new SimpleAssignation(
-                    statement.get(0).getValue(),
+                    statement.getFirst().getValue(),
                     valueASTBuilder.build(statement.subList(2, statement.size()))
             );
     }
