@@ -2,7 +2,6 @@ package parser.builder;
 
 import ast.*;
 import ast.interfaces.ASTNode;
-import ast.interfaces.ValueNode;
 import token.Token;
 
 import java.util.List;
@@ -10,14 +9,11 @@ import java.util.Objects;
 
 public class DeclarationASTBuilder implements ASTBuilder<ASTNode> {
     private final String version;
-    private final ValueASTBuilder valueASTBuilder = new ValueASTBuilder();
+    private final ValueASTBuilder valueASTBuilder;
 
     public DeclarationASTBuilder(String version) {
         this.version = version;
-    }
-
-    public String getVersion() {
-        return version;
+        this.valueASTBuilder = new ValueASTBuilder(version);
     }
 
     @Override
@@ -38,35 +34,26 @@ public class DeclarationASTBuilder implements ASTBuilder<ASTNode> {
         if(statement.size() > 4 && Objects.equals(statement.get(4).getType(), "ASSIGN")){
             return getDeclarationAssignation(statement);
         }else{
-            if(Objects.equals(statement.get(0).getValue(), "const")){
-                if(Objects.equals(version, "1.0")){
-                    throw new IllegalStateException("Invalid keyword 'const'");
-                }else{
-                    throw new IllegalStateException("A const variable should have a value assigned");
-                }
+            return getDeclaration(statement);
+        }
+    }
+
+    private Declaration getDeclaration(List<Token> statement) {
+        if(Objects.equals(statement.getFirst().getValue(), "const")){
+            if(Objects.equals(version, "1.0")){
+                throw new IllegalStateException("Invalid keyword 'const'");
             }else{
-                return new Declaration(statement.get(1).getValue(), statement.get(3).getValue());
+                throw new IllegalStateException("A const variable should have a value assigned");
             }
+        }else{
+            return new Declaration(statement.get(1).getValue(), statement.get(3).getValue());
         }
     }
 
     private DeclarationAssignation getDeclarationAssignation(List<Token> statement) {
-        if (Objects.equals(version, "1.0")){
-            if (Objects.equals(statement.get(0).getValue(), "const")){
+        if(Objects.equals(statement.getFirst().getValue(), "const")){
+            if(Objects.equals(version, "1.0")){
                 throw new IllegalStateException("Invalid keyword 'const'");
-            }else {
-                return new DeclarationAssignation(
-                        new Declaration(statement.get(1).getValue(), statement.get(3).getValue()),
-                        valueASTBuilder.build(statement.subList(5, statement.size()))
-                );
-            }
-        }else{
-            if (Objects.equals(statement.get(0).getValue(), "let")){
-                return new DeclarationAssignation(
-                        new Declaration(statement.get(1).getValue(), statement.get(3).getValue()),
-                        valueASTBuilder.build(statement.subList(5, statement.size())),
-                        false
-                );
             }else{
                 return new DeclarationAssignation(
                         new Declaration(statement.get(1).getValue(), statement.get(3).getValue()),
@@ -74,6 +61,12 @@ public class DeclarationASTBuilder implements ASTBuilder<ASTNode> {
                         true
                 );
             }
+        }else{
+            return new DeclarationAssignation(
+                    new Declaration(statement.get(1).getValue(), statement.get(3).getValue()),
+                    valueASTBuilder.build(statement.subList(5, statement.size())),
+                    false
+            );
         }
     }
 }
